--- a/package.json
+++ b/package.json
@@ -8,17 +8,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@types/lodash": "^4.14.115",
-    "lodash": "^4.17.10",
-    "vue": "^2.5.16",
-    "vue-class-component": "^6.0.0",
-    "vue-property-decorator": "^7.0.0",
-    "vuex": "^3.0.1"
+    "@types/lodash": "^4.14.120",
+    "lodash": "^4.17.11",
+    "vue": "^2.5.22",
+    "vue-class-component": "^6.3.2",
+    "vue-property-decorator": "^7.3.0",
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-typescript": "^3.0.0-rc.10",
-    "@vue/cli-service": "^3.0.0-rc.10",
-    "typescript": "^3.0.0",
-    "vue-template-compiler": "^2.5.16"
+    "@vue/cli-plugin-typescript": "^3.3.0",
+    "@vue/cli-service": "^3.3.0",
+    "typescript": "^3.2.4",
+    "vue-template-compiler": "^2.5.22"
   }
 }
